<resources>
    <string name="app_name">Logica App Kotlin</string>
    <string name="titel">Conjunction (AND)</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="ab">AandB</string>

    <string name="isTrue">T</string>
    <string name="isFalse">F</string>
    <string name="submit">Submit</string>
    <string name="question">T or F</string>
    <string name="text">The correct number of answers is: </string>

</resources>
